<resources>
    <string name="app_name">TP STM</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Splash -->
    <string name="splashTitle">STM Pathfinder</string>
    <string name="splashDescription">Get almost any place in Montreal using the city\'s intricate public transportation network.</string>
    <string name="querySent">The application is now searching. Please wait a few seconds.</string>
    <string name="pleaseWait">The application is already searching. Can\'t you wait!?.</string>

    <!-- Activity Main -->
    <string name="origine_value" translatable="false">Pavillon André-Aisenstadt (45.5010115, −73.6179101)</string>
    <string name="selectInitialPosition">1 - Mark your initial position</string>
    <string name="selectInitialPositionButton">Click here to mark your initial position</string>
    <string name="selectObjectivePosition">2 - Mark your destination</string>
    <string name="selectObjectivePositionButton">Click here to mark your destination</string>
    <string name="adjustMaxWalkingDistance">3 - Adjust the maximum walking distance</string>
    <string name="selectDate">4 - Select a departure date</string>
    <string name="selectDateButton">Click here to select date</string>
    <string name="selectTime">5 - Select a departure time</string>
    <string name="selectTimeButton">Click here to select time</string>
    <string name="launchSearch">6 - Launch search</string>
    <string name="search">Search</string>
    <string name="zeroResult">Absolutely no result were found. Change the information above and try again.</string>

    <!-- Activity Map -->
    <string name="instruction">Hold your finger somewhere on the map to move the marker.</string>
    <string name="instructionInitialPosition">Please mark your initial position</string>
    <string name="instructionObjectivePosition">Please mark your objective position</string>
    <string name="initialPosition">Initial position</string>
    <string name="objectivePosition">Objective position</string>
    <string name="changeRegistered">Change registered</string>


    <!-- Activity Selector -->
    <string name="back">Back</string>
    <string name="itineraryFound">itinerarie(s) found</string>
    <string name="line">Line</string>
    <string name="itineraryNumber">Itinary number</string>
    <string name="previous" translatable="false">&lt;</string>
    <string name="next" translatable="false">&gt;</string>
    <string name="selectItinerary">Select this itinerary</string>

    <!-- Activity Display -->
    <string name="requiredTime">Required time</string>
    <string name="departureTime">Departure time</string>
    <string name="arrivalTime">Arrival time</string>
    <string name="correspondanes" translatable="false">Correspondance(s)</string>
    <string name="meter">meter(s)</string>
    <string name="distanceA">Distance from stop</string>
    <string name="distanceDestination">Distance from destination</string>
    <string name="boardingStopName">Boarding stop name</string>
    <string name="arrivalStopName">Arrival stop name</string>
    <string name="transitBoardingTime">Transit boarding time</string>
    <string name="transitArrivalTime">Transit arrival time</string>
    <string name="totalRequiredTime">Total required time</string>
    <string name="totalWalkingDistance">Total walking distance</string>
    <string name="walkDistance">Walk distance</string>

    <!-- Others -->
    <string name="error">An error occured</string>
</resources>
