<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDestination"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDestinations"
            android:spinnerMode="dropdown"
            android:gravity="center_horizontal"
            android:textAlignment="gravity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDate"
            android:id="@+id/textView2"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectDateButton"
            android:id="@+id/buttonDate"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="onSelectDateClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            android:id="@+id/textView3"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectTimeButton"
            android:id="@+id/buttonTime"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="onSelectTimeClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launchSearch"
            android:id="@+id/textView6"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:background="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/buttonSearch"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:textStyle="bold"
            android:onClick="onSearchButtonClick"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>