<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonBack"
        android:gravity="center_horizontal"
        android:textAlignment="gravity"
        android:onClick="onSelectorActivityBackButtonClick"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itineraryFound"
        android:id="@+id/textViewResults"
        android:textAlignment="gravity"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@+id/buttonBack" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/buttonPrevious"
        android:layout_below="@+id/textViewResults"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:onClick="onPreviousItineraryButtonClick" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textViewResultDisplay"
        android:layout_toRightOf="@+id/buttonPrevious"
        android:layout_toLeftOf="@+id/buttonNext"
        android:textAlignment="gravity"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignTop="@+id/buttonPrevious"
        android:layout_alignBottom="@+id/buttonPrevious" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonNext"
        android:layout_below="@+id/textViewResults"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:onClick="onNextItineraryButtonClick" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_below="@+id/textViewResultDisplay"
        android:layout_above="@+id/buttonSelectItinerary" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectItinerary"
        android:id="@+id/buttonSelectItinerary"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:onClick="onSelectItineraryButtonClick" />

</RelativeLayout>